fix z-index for yellow bars

--- a/sass/scss/_archive.scss
+++ b/sass/scss/_archive.scss
@@ -10,4 +10,6 @@
     @include padding-leader(4);
     @include pre(1);
     @include span-columns(7);
+    position: relative;
+    z-index: 1;
 }
